--- a/app/src/main/res/layout/activity_create_report.xml
+++ b/app/src/main/res/layout/activity_create_report.xml
@@ -51,6 +51,7 @@
                 android:layout_marginStart="35dp"
                 android:layout_marginEnd="10dp"
                 android:hint="dd/mm/aaaa"
+                android:enabled="false"
                 android:inputType="date"
                 android:textColor="#000000" />
 
