--- a/app/src/main/res/layout/activity_check_reports.xml
+++ b/app/src/main/res/layout/activity_check_reports.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
+        android:paddingBottom="85dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/checkRpTitle"/>
