--- a/app/src/main/res/layout/report_card_view.xml
+++ b/app/src/main/res/layout/report_card_view.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/cvReportDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Description"
+                android:text="(Sin descripcion)"
                 android:textSize="12dp"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="20dp"
