--- a/app/src/main/res/layout/activity_check_reports.xml
+++ b/app/src/main/res/layout/activity_check_reports.xml
@@ -10,10 +10,10 @@
         android:id="@+id/checkRpTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginTop="@dimen/checkRPTitleTopMargin"
+        android:layout_marginStart="@dimen/checkRPTitleStartMargin"
         android:text="@string/checkRpTitle"
-        android:textSize="@dimen/createActTitle"
+        android:textSize="@dimen/createActTitleTextSize"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -22,10 +22,10 @@
         android:id="@+id/checkRpReciclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
-        android:paddingBottom="85dp"
+        android:layout_marginStart="@dimen/checkRPRecyclerMargins"
+        android:layout_marginEnd="@dimen/checkRPRecyclerMargins"
+        android:layout_marginTop="@dimen/checkRPRecyclerMargins"
+        android:paddingBottom="@dimen/checkRPRecyclerPaddingBottom"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/checkRpTitle"/>
