--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -10,10 +10,10 @@
         android:id="@+id/createActTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginTop="@dimen/createActTitleTopMargin"
+        android:layout_marginStart="@dimen/createActTVStartMargin"
         android:text="@string/createActTitle"
-        android:textSize="@dimen/createActTitle"
+        android:textSize="@dimen/createActTitleTextSize"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -22,8 +22,8 @@
         android:id="@+id/createActLblEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="@dimen/createActTVStartMargin"
+        android:layout_marginTop="@dimen/createActEmailTopMargin"
         android:text="@string/createActLblEmail"
         android:textColor="@color/colorMotivo"
         android:textStyle="bold"
@@ -34,11 +34,11 @@
         android:id="@+id/createActTxtEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/createActETStartMargin"
+        android:layout_marginEnd="@dimen/createActETEndMargin"
+        android:layout_marginTop="@dimen/createActETTopMargin"
         android:inputType="textEmailAddress"
-        android:hint="ejemplo@email.com"
+        android:hint="@string/createActEmailHint"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createActLblEmail" />
@@ -47,8 +47,8 @@
         android:id="@+id/createActLblPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/createActTVStartMargin"
+        android:layout_marginTop="@dimen/createActPasswordTopMargin"
         android:text="@string/loginLblPassword"
         android:textColor="@color/colorMotivo"
         android:textStyle="bold"
@@ -59,11 +59,11 @@
         android:id="@+id/createActTxtPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/createActETStartMargin"
+        android:layout_marginEnd="@dimen/createActETEndMargin"
+        android:layout_marginTop="@dimen/createActETTopMargin"
         android:inputType="textPassword"
-        android:textColor="#000000"
+        android:textColor="@color/colorPureBlack"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createActLblPassword" />
 
@@ -71,9 +71,9 @@
         android:id="@+id/createActCBTerms"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/createActCBStartMargin"
+        android:layout_marginEnd="@dimen/createActCBEndMargin"
+        android:layout_marginTop="@dimen/createActCBTopMargin"
         android:text="@string/createActCBTerms"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createActTxtPassword" />
@@ -82,13 +82,13 @@
         android:id="@+id/createActButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="@dimen/createActBTNStartMargin"
+        android:layout_marginEnd="@dimen/createActBTNEndMargin"
+        android:layout_marginTop="@dimen/createActBTNTopMargin"
         android:text="@string/creactActButtonContinue"
         android:background="@drawable/green_button"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorPureWhite"
         android:enabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
