--- a/app/src/main/res/layout/activity_create_report.xml
+++ b/app/src/main/res/layout/activity_create_report.xml
@@ -15,10 +15,10 @@
             android:id="@+id/createRpTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="40dp"
+            android:layout_marginTop="@dimen/createRPTVTopMargin"
+            android:layout_marginStart="@dimen/createRPTVStartMargin"
             android:text="@string/createRpTitle"
-            android:textSize="@dimen/createActTitle"
+            android:textSize="@dimen/createActTitleTextSize"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -27,13 +27,13 @@
             android:id="@+id/createRpLblDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="@dimen/createRPTVTopMargin"
+            android:layout_marginStart="@dimen/createRPTVStartMargin"
             android:text="@string/createRpLblDate"
             android:textColor="@color/colorMotivo"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@id/createRpTitle"/>
+            app:layout_constraintTop_toBottomOf="@id/createRpTitle"/>
 
         <LinearLayout
             android:id="@+id/createRpLayoutDate"
@@ -48,30 +48,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginStart="35dp"
-                android:layout_marginEnd="10dp"
+                android:layout_marginStart="@dimen/createRPETStartMargin"
+                android:layout_marginEnd="@dimen/createRPETTopMargin"
                 android:hint="dd/mm/aaaa"
                 android:enabled="false"
-                android:textColor="#000000" />
+                android:textColor="@color/colorPureBlack" />
 
             <Button
                 android:id="@+id/createRpBtnDate"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_weight="1"
-                android:layout_marginEnd="35dp"
+                android:layout_marginEnd="@dimen/createRPBTNEndMargin"
                 android:background="@drawable/green_button"
                 android:text="@string/createRpButtonSelectDate"
                 android:textAllCaps="false"
-                android:textColor="#FFFFFF" />
+                android:textColor="@color/colorPureWhite" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/createRpLblCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/createRPTVTopMargin"
+            android:layout_marginStart="@dimen/createRPTVStartMargin"
             android:text="@string/createRpLblCategory"
             android:textColor="@color/colorMotivo"
             android:textStyle="bold"
@@ -82,9 +82,9 @@
             android:id="@+id/createRpSpinnerCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/createRPSPStartMargin"
+            android:layout_marginEnd="@dimen/createRPSPEndMargin"
+            android:layout_marginTop="@dimen/createRPSPTopMargin"
             android:background="@drawable/custom_spinner"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/createRpLblCategory"/>
@@ -93,8 +93,8 @@
             android:id="@+id/createRpLblDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/createRPTVTopMargin"
+            android:layout_marginStart="@dimen/createRPTVStartMargin"
             android:text="@string/createRpLblDescription"
             android:textColor="@color/colorMotivo"
             android:textStyle="bold"
@@ -105,9 +105,9 @@
             android:id="@+id/createRpTxtDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/createRPETStartMargin"
+            android:layout_marginEnd="@dimen/createRPETEndMargin"
+            android:layout_marginTop="@dimen/createRPETTopMargin"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/createRpLblDescription"/>
 
@@ -115,8 +115,8 @@
             android:id="@+id/createRpLblLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/createRPTVTopMargin"
+            android:layout_marginStart="@dimen/createRPTVStartMargin"
             android:text="@string/createRpLblLocation"
             android:textColor="@color/colorMotivo"
             android:textStyle="bold"
@@ -127,9 +127,9 @@
             android:id="@+id/createRpTxtLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/createRPETStartMargin"
+            android:layout_marginEnd="@dimen/createRPETEndMargin"
+            android:layout_marginTop="@dimen/createRPETTopMargin"
             android:enabled="false"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/createRpLblLocation"/>
@@ -138,13 +138,13 @@
             android:id="@+id/createRpBtnSelectOnMap"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/createRPBTNStartMargin"
+            android:layout_marginEnd="@dimen/createRPBTNEndMargin"
+            android:layout_marginTop="@dimen/createRPBTNTopMargin"
             android:text="@string/createRpButtonSelectOnMap"
             android:background="@drawable/green_button"
             android:textAllCaps="false"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorPureWhite"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/createRpTxtLocation" />
@@ -153,13 +153,13 @@
             android:id="@+id/createRpBtnTakePicture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/createRPBTNStartMargin"
+            android:layout_marginEnd="@dimen/createRPBTNEndMargin"
+            android:layout_marginTop="@dimen/createRPBTNTopMargin"
             android:text="@string/createRpButtonTakePicture"
             android:background="@drawable/green_button"
             android:textAllCaps="false"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorPureWhite"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/createRpBtnSelectOnMap" />
@@ -168,14 +168,14 @@
             android:id="@+id/createRpBtnContinue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="70dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginStart="@dimen/createRPBTNStartMargin"
+            android:layout_marginTop="@dimen/createRPBTNContinueTopMargin"
+            android:layout_marginEnd="@dimen/createRPBTNEndMargin"
+            android:layout_marginBottom="@dimen/createRPBTNContinueBottomMargin"
             android:background="@drawable/green_button"
             android:text="@string/createRpButtonContinue"
             android:textAllCaps="false"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorPureWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
