--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,10 +10,10 @@
         android:id="@+id/loginScreenTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/loginScreenTitleTopMargin"
         android:text="@string/loginTitle"
         android:textColor="@color/colorMotivo"
-        android:textSize="@dimen/loginScreenTitle"
+        android:textSize="@dimen/loginScreenTitleTextSize"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -23,10 +23,10 @@
         android:id="@+id/loginTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginStart="@dimen/loginTVStartMargin"
+        android:layout_marginTop="@dimen/loginTitleTopMargin"
         android:text="@string/loginIniciarSesion"
-        android:textSize="@dimen/loginTitle"
+        android:textSize="@dimen/loginTitleTextSize"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginScreenTitle" />
@@ -35,8 +35,8 @@
         android:id="@+id/loginLblEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="@dimen/loginTVStartMargin"
+        android:layout_marginTop="@dimen/loginEmailTopMargin"
         android:text="@string/loginLblEmail"
         android:textColor="@color/colorMotivo"
         android:textStyle="bold"
@@ -47,12 +47,12 @@
         android:id="@+id/loginTxtEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/loginETStartMargin"
+        android:layout_marginEnd="@dimen/loginETEndMargin"
+        android:layout_marginTop="@dimen/loginETTopMargin"
         android:inputType="textEmailAddress"
         android:hint="ejemplo@email.com"
-        android:textColor="#000000"
+        android:textColor="@color/colorPureBlack"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginLblEmail" />
 
@@ -60,8 +60,8 @@
         android:id="@+id/loginLblPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/loginTVStartMargin"
+        android:layout_marginTop="@dimen/loginPasswordTopMargin"
         android:text="@string/loginLblPassword"
         android:textColor="@color/colorMotivo"
         android:textStyle="bold"
@@ -72,11 +72,11 @@
         android:id="@+id/loginTxtPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/loginETStartMargin"
+        android:layout_marginEnd="@dimen/loginETEndMargin"
+        android:layout_marginTop="@dimen/loginETTopMargin"
         android:inputType="textPassword"
-        android:textColor="#000000"
+        android:textColor="@color/colorPureBlack"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginLblPassword" />
 
@@ -84,13 +84,13 @@
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/loginBTNStartMargin"
+        android:layout_marginEnd="@dimen/loginBTNEndMargin"
+        android:layout_marginTop="@dimen/loginBTNLogIn"
         android:text="@string/loginIniciarSesion"
         android:background="@drawable/green_button"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorPureWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginTxtPassword" />
@@ -99,12 +99,12 @@
         android:id="@+id/loginCreateAccountBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="@dimen/loginBTNStartMargin"
+        android:layout_marginEnd="@dimen/loginBTNEndMargin"
+        android:layout_marginTop="@dimen/loginBTNCreateAccount"
         android:text="@string/loginButtonCreateAccount"
         android:textAllCaps="false"
-        android:textColor="#000000"
+        android:textColor="@color/colorPureBlack"
         style="?android:attr/borderlessButtonStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
