--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -15,10 +15,10 @@
         android:id="@+id/viewRpTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginTop="@dimen/viewRPTitleTopMargin"
+        android:layout_marginStart="@dimen/viewRPTVStartMargin"
         android:text="@string/viewRpTitle"
-        android:textSize="@dimen/createActTitle"
+        android:textSize="@dimen/createActTitleTextSize"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -27,8 +27,8 @@
         android:id="@+id/viewRpLblDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="@dimen/viewRPTVStartMargin"
+        android:layout_marginTop="@dimen/viewRPTVTopMargin"
         android:text="@string/viewRpDate"
         android:textColor="@color/colorMotivo"
         android:textStyle="bold"
@@ -39,9 +39,9 @@
         android:id="@+id/viewRpTxtDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/viewRPETStartMargin"
+        android:layout_marginEnd="@dimen/viewRPETEndMargin"
+        android:layout_marginTop="@dimen/viewRPETTopMargin"
         android:enabled="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewRpLblDate"/>
@@ -50,8 +50,8 @@
         android:id="@+id/viewRpLblCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="@dimen/viewRPTVStartMargin"
+        android:layout_marginTop="@dimen/viewRPTVTopMargin"
         android:text="@string/viewRpCategory"
         android:textColor="@color/colorMotivo"
         android:textStyle="bold"
@@ -62,9 +62,9 @@
         android:id="@+id/viewRpTxtCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/viewRPETStartMargin"
+        android:layout_marginEnd="@dimen/viewRPETEndMargin"
+        android:layout_marginTop="@dimen/viewRPETTopMargin"
         android:enabled="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewRpLblCategory"/>
@@ -73,8 +73,8 @@
         android:id="@+id/viewRpLblDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="@dimen/viewRPTVStartMargin"
+        android:layout_marginTop="@dimen/viewRPTVTopMargin"
         android:text="@string/viewRpDescription"
         android:textColor="@color/colorMotivo"
         android:textStyle="bold"
@@ -85,9 +85,9 @@
         android:id="@+id/viewRpTxtDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/viewRPETStartMargin"
+        android:layout_marginEnd="@dimen/viewRPETEndMargin"
+        android:layout_marginTop="@dimen/viewRPETTopMargin"
         android:enabled="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewRpLblDescription"/>
@@ -96,8 +96,8 @@
         android:id="@+id/viewRpLblLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="@dimen/viewRPTVStartMargin"
+        android:layout_marginTop="@dimen/viewRPTVTopMargin"
         android:text="@string/viewRpLocation"
         android:textColor="@color/colorMotivo"
         android:textStyle="bold"
@@ -108,9 +108,9 @@
         android:id="@+id/viewRpTxtLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/viewRPETStartMargin"
+        android:layout_marginEnd="@dimen/viewRPETEndMargin"
+        android:layout_marginTop="@dimen/viewRPETTopMargin"
         android:enabled="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewRpLblLocation"/>
@@ -119,8 +119,8 @@
         android:id="@+id/viewRpLblPictureTaken"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="@dimen/viewRPTVStartMargin"
+        android:layout_marginTop="@dimen/viewRPTVTopMargin"
         android:text="@string/viewRpPictureTaken"
         android:textColor="@color/colorMotivo"
         android:textStyle="bold"
@@ -130,10 +130,10 @@
     <ImageView
         android:id="@+id/viewRpImageView"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="@dimen/viewRPEVHeight"
+        android:layout_marginTop="@dimen/viewRPEVTopMargin"
+        android:layout_marginStart="@dimen/viewRPEVStartMargin"
+        android:layout_marginEnd="@dimen/viewRPEVEndMargin"
         app:srcCompat="@drawable/image_placeholder"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewRpLblPictureTaken"/>
@@ -142,14 +142,14 @@
         android:id="@+id/viewRpButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="@dimen/viewRPBTNTTopMargin"
+        android:layout_marginStart="@dimen/viewRPBTNTStartMargin"
+        android:layout_marginEnd="@dimen/viewRPBTNTEndMargin"
+        android:layout_marginBottom="@dimen/viewRPBTNTBottomMargin"
         android:background="@drawable/green_button"
         android:textAllCaps="false"
         android:text="@string/viewRpViewOnMap"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorPureWhite"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/viewRpImageView"/>
