--- a/app/src/main/res/layout/report_card_view.xml
+++ b/app/src/main/res/layout/report_card_view.xml
@@ -11,9 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:elevation="8dp"
+        android:elevation="@dimen/cvElevation"
         app:cardUseCompatPadding="true"
-        app:cardCornerRadius="12dp">
+        app:cardCornerRadius="@dimen/cvCornerRadius">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -23,11 +23,11 @@
                 android:id="@+id/cvReportCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="12dp"
-                android:text="Category"
-                android:textColor="#000000"
-                android:textSize="16dp"
+                android:layout_marginStart="@dimen/cvTVStartMargin"
+                android:layout_marginTop="@dimen/cvTVTopMargin"
+                android:text="@string/cvCategory"
+                android:textColor="@color/colorPureBlack"
+                android:textSize="@dimen/cvTVTextSize"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -36,10 +36,10 @@
                 android:id="@+id/cvReportDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="12dp"
-                android:text="Date"
-                android:textSize="16dp"
+                android:layout_marginTop="@dimen/cvTVTopMargin"
+                android:layout_marginEnd="@dimen/cvTVEndMargin"
+                android:text="@string/cvDate"
+                android:textSize="@dimen/cvTVTextSize"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,11 +47,11 @@
                 android:id="@+id/cvReportDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="(Sin descripcion)"
-                android:textSize="12dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="12dp"
+                android:text="@string/cvDescription"
+                android:textSize="@dimen/cvDescriptionTextSize"
+                android:layout_marginStart="@dimen/cvTVStartMargin"
+                android:layout_marginTop="@dimen/cvDescriptionTopMargin"
+                android:layout_marginBottom="@dimen/cvDescriptionBottomMargin"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintHorizontal_chainStyle="spread_inside"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -63,13 +63,13 @@
             <Button
                 android:id="@+id/cvReportButton"
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:text="Ver"
+                android:layout_height="@dimen/cvBTNHeight"
+                android:text="@string/cvBtnVer"
                 android:textAllCaps="false"
                 android:background="@drawable/green_button"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="12dp"
+                android:layout_marginTop="@dimen/cvBTNTopMargin"
+                android:layout_marginEnd="@dimen/cvBTNEndMargin"
+                android:layout_marginBottom="@dimen/cvBTNBottomMargin"
                 app:layout_constraintTop_toBottomOf="@+id/cvReportDate"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
